--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .sidebar{
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),url(/img/img1.jpeg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),url(../img/img1.jpeg);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
